Alignment Fix and On hover effect added

--- a/Design-Final_18/css/layout.css
+++ b/Design-Final_18/css/layout.css
@@ -52,6 +52,10 @@
     padding: 10px auto;
 }
 
+.search-form button{
+  border-radius: 0px 5px 5px 0px;
+}
+
 .top-nav{
   border-radius: 5px;
 }
@@ -186,7 +190,7 @@
   }
 
   .title{
-      margin-bottom: 20px;
+      margin-bottom: 40px;
       text-align: center;
   }
 
@@ -540,6 +544,7 @@
   box-shadow: 0 2px 2px rgba(134, 134, 134, 0.801);
   z-index: 9999;
   max-width: 750px;
+  min-width: 730px;
 
 }
 
@@ -611,6 +616,7 @@
 
 
 .review-left{
+  margin-top: 10px;
   float: left;
   width: 350px;
 }
@@ -648,6 +654,7 @@
 
 .cite-words{
   text-align: left;
+
 }
 
 .cite{
@@ -656,7 +663,7 @@
 }
 
 .cite-img img{
-  margin-left: 5px;
+  margin-left: 30px;
 }
 
 
@@ -668,13 +675,13 @@
 
 .contact-word{
   float: left;
-  margin-left: 30px;
+  margin-left: 20px;
 }
 
 .contact-button{
   float: right;
-  margin-top: 20px;
-  margin-right: 30px;
+  margin-top: 10px;
+  margin-right: 20px;
 }
 
 
@@ -1012,8 +1019,13 @@
   margin-right: 80px;
 }
 
+
 .cite-words{
   margin-right: 50px;
+}
+
+.cite-img img{
+  margin-left: 0px;
 }
 
 /* contact Section */
